    * support for attachments in lavf demuxer
    * support for chapters in lavf demuxer
    * FLAC speedup in lavf demuxer
    * MNG demuxer

    Filters:
    * vf_ow new overcomplete wavelet denoiser
    * change vf_screenshot dependency from libpng to lavc
    * add af_scaletempo which maintains audio pitch when changing playback speed
    * fix multi-channel reordering

    Streaming:
    * tv:// support for Windows
    * fix teletext on some systems
    * DVD streams can switch angles
    * DVD still menus are now supported via dvdnav://
    * allow specifying the TV standard for each channel

    FFmpeg/libavcodec:
    * DNxHD (SMPTE VC-3) encoder
    * H.264 speedup and PAFF decoding
    * correctly decode more of the H.264 conformance testsuite
    * Nellymoser audio codec
    * VC-1/WMV3 MMX optimizations
    * VP3 decoder speedup
    * Split-Radix FFT (speedup multiple audio codecs)
    * MMX/SSE/ARM and other misc speedups
    * QCELP decoder
    * RV30 decoder
    * RV40 decoder

    libmpeg2:
    * enable Alpha/ARM optimizations in libmpeg2
    * SSE2-optimized IDCT routines from upstream libmpeg2
    * libmpeg2 updated to version 0.5.1

    Drivers:
    * replace PolypAudio by PulseAudio (-ao pulse)
    * add force-pbo suboption for faster output in vo_gl
    * add Nintendo Wii/GameCube video driver (-vo wii)
    * VIDIX driver for SuperH Mobile VEU hardware block.
    * support -border on vo_gl/gl2 in x11
    * Direct3D Windows video output driver added.
    * factorize code in vo_wii
    * removed unnecessary code from vo x11, xv, xvmc
    * automatic detection of hw acceleration (vo gl:yuv=x) for vo_gl

    MEncoder:
    * check for system-wide configuration file in MEncoder
    * AVOption support for lavc encoders
    * AVOption support for lavf muxers

    Others:
    * many compiler warning fixes
    * basic support for Closed Captioning roll-up mode
    * reworked screensaver disabling support, most users will need to use