@@ -5486,6 +5486,13 @@ Changing playback speed, would change pitch, leaving audio tempo at 1.2x.
 .RE
 .PD 1
 .
+.TP
+.B "stats\ \ "
+Collects and prints statistics about the audio stream, especially the volume.
+These statistics are especially intended to help adjusting the volume while
+avoiding clipping.
+The volumes are printed in dB and compatible with the volume audio filter.
+.
 .
 .
 .SH "VIDEO FILTERS"
